fix contact label overflow ellipsis

--- a/application/src/main/webapp/css/components/chatContact.less
+++ b/application/src/main/webapp/css/components/chatContact.less
@@ -8,7 +8,7 @@
 
   &, .contactDetail {
     flex: 1;
-    width: 0;
+    min-width: 0;
   }
   .contactDetail {
     margin-left: 10px;
